# lightning-hydra-zen-template

./: .gitignore  .pre-commit-config.yaml  README.md  checklist.md  environment.yaml  justfile  pyproject.toml  req.txt
.github/workflows/: coverage.yaml  publish.yaml  tests.yaml
configs/: cfg.yaml  config.yaml  eval.yaml  test.yaml  train.yaml
configs-old/debug/: fast_dev_run.yaml
configs-old/model/: mnist.yaml
configs-old/model/metrics/: accuracy.yaml
configs-old/trainer/callbacks/: _callbacks.yaml  early_stopping.yaml
configs-old/trainer/logger/: csv.yaml  mlflow.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  rich_model_summary.yaml  rich_progress_bar.yaml
configs/datamodule/: mnist.yaml
configs/debug/: _debug.yaml  base.yaml  default.yaml  fast_dev_run.yaml  fdr.yaml  limit.yaml  overfit.yaml  overfit_batches.yaml  profiler.yaml
configs/experiment/: mnist.yaml
configs/hpo/: mnist.yaml
configs/hydra/: default.yaml  hydra.yaml
configs/hyperparameter_optimization/: mnist.yaml
configs/logger/: csv.yaml  default.yaml  mlflow.yaml  tensorboard.yaml
configs/metrics/: accuracy.yaml  default.yaml  f1score.yaml  precision.yaml  recall.yaml
configs/model/: mnist.yaml  model.yaml
configs/model/metrics/: _metrics.yaml  accuracy.yaml  f1score.yaml  precision.yaml  recall.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/paths/: default.yaml  paths.yaml
configs/trainer/: default.yaml  trainer.yaml
configs/trainer/callbacks/: model_checkpoint.yaml
configs/trainer/logger/: _logger.yaml
src/: eval.py  test.py  train.py
src/configs/: __init__.py  callbacks.py  config.py  hydra_cfg.py  logger.py  main.py  paths.py  print_config.py  train_mock.py  trainer.py
src/configs/experiment/: __init__.py  mnist.py
src/datamodule/: mnist.py  mnist_datamodule.py
src/dl/: test.py  train.py
src/dl/datamodule/: mnist.py
src/dltemplate/: test.py  train.py
src/dltemplate/model/: resnet.py
src/dltemplate/utils/: print_cfg.py
src/hydrazen/: __init__.py  train_mock.py
src/hydrazen/experiment/: __init__.py  mnist.py
src/lightning_hydra_zen_template/: _config.py  _eval.py  _train.py  eval.py  main.py  test.py  train.py
src/lightning_hydra_zen_template/configs/: __init__.py  config.py  eval.py  train.py
src/lightning_hydra_zen_template/configs/groups/: callbacks.py  data.py  debug.py  experiment.py  hparams_search.py  hydra_conf.py  logger.py  model.py  trainer.py
src/lightning_hydra_zen_template/configs/hydra_conf/: default.py
src/lightning_hydra_zen_template/configs/paths/: default.py
src/lightning_hydra_zen_template/configs/utils/: paths.py  utils.py
src/lightning_hydra_zen_template/data/: iris.py  mnist.py
src/lightning_hydra_zen_template/funcs/: eval.py  train.py  validate.py
src/lightning_hydra_zen_template/model/: model.py
src/lightning_hydra_zen_template/model/components/: resnet.py  simple_dense_net.py
src/lightning_hydra_zen_template/scikit_learn/: checkpoint.py  datamodule.py  module.py  trainer.py
src/lightning_hydra_zen_template/sklearn/: checkpoint.py  module.py  trainer.py
src/lightning_hydra_zen_template/utils/: imports.py  logging.py  print_cfg.py  print_config.py  ranked_logger.py  types.py
src/model/: lightning_model.py  mnist_module.py  model.py  resnet.py
src/utils/: instantiate_list.py  log_utils.py  print_cfg.py  pydantic.py  types.py  utils.py
tests/: conftest.py  test_configs.py  test_eval.py  test_test.py  test_train.py
tests/configs/: test_configs.py
tests/data/: test_mnist.py
tests/datamodule/: test_mnist.py
tests/funcs/: test_eval.py  test_train.py
tests/model/: test_model.py  test_resnet.py
tests/scikit_learn/: test_datamodule.py  test_module.py  test_trainer.py
tests/sklearn/: test_datamodule.py  test_module.py  test_trainer.py
tests/torchmetrics/: test_accuracy.py  test_torchmetrics.py
tests/utils/: test_log_utils.py  test_utils.py
typings/rootutils/: __init__.pyi  rootutils.pyi
typings/torchvision/: __init__.pyi  _meta_registrations.pyi  _utils.pyi  utils.pyi
typings/torchvision/datasets/: __init__.pyi  _optical_flow.pyi  _stereo_matching.pyi  caltech.pyi  celeba.pyi  cifar.pyi  cityscapes.pyi  clevr.pyi  coco.pyi  country211.pyi  dtd.pyi  eurosat.pyi  fakedata.pyi  fer2013.pyi  fgvc_aircraft.pyi  flickr.pyi  flowers102.pyi  folder.pyi  food101.pyi  gtsrb.pyi  hmdb51.pyi  imagenet.pyi  imagenette.pyi  inaturalist.pyi  kinetics.pyi  kitti.pyi  lfw.pyi  lsun.pyi  mnist.pyi  moving_mnist.pyi  omniglot.pyi  oxford_iiit_pet.pyi  pcam.pyi  phototour.pyi  places365.pyi  rendered_sst2.pyi  sbd.pyi  sbu.pyi  semeion.pyi  stanford_cars.pyi  (+10 more)
typings/torchvision/io/: _video_opt.pyi  image.pyi  video.pyi  video_reader.pyi
typings/torchvision/models/: __init__.pyi  _api.pyi  _utils.pyi  alexnet.pyi  convnext.pyi  densenet.pyi  efficientnet.pyi  googlenet.pyi  inception.pyi  maxvit.pyi  mnasnet.pyi  mobilenetv2.pyi  mobilenetv3.pyi  regnet.pyi  resnet.pyi  shufflenetv2.pyi  squeezenet.pyi  swin_transformer.pyi  vgg.pyi  vision_transformer.pyi
typings/torchvision/models/detection/: __init__.pyi  _utils.pyi  anchor_utils.pyi  backbone_utils.pyi  faster_rcnn.pyi  fcos.pyi  generalized_rcnn.pyi  image_list.pyi  keypoint_rcnn.pyi  mask_rcnn.pyi  retinanet.pyi  roi_heads.pyi  rpn.pyi  ssd.pyi  ssdlite.pyi  transform.pyi
typings/torchvision/models/optical_flow/: __init__.pyi  _utils.pyi  raft.pyi
typings/torchvision/ops/: _register_onnx_ops.pyi  _utils.pyi  boxes.pyi  ciou_loss.pyi  deform_conv.pyi  diou_loss.pyi  drop_block.pyi  feature_pyramid_network.pyi  focal_loss.pyi  giou_loss.pyi  misc.pyi  poolers.pyi  ps_roi_align.pyi  ps_roi_pool.pyi  roi_align.pyi  roi_pool.pyi  stochastic_depth.pyi
typings/torchvision/transforms/: __init__.pyi  _functional_pil.pyi  _functional_tensor.pyi  _presets.pyi  autoaugment.pyi  functional.pyi  transforms.pyi
typings/torchvision/tv_tensors/: __init__.pyi  _bounding_boxes.pyi  _dataset_wrapper.pyi  _image.pyi  _mask.pyi  _torch_function_helpers.pyi  _tv_tensor.pyi  _video.pyi
(+40 files in other folders)
