[project]
name = "deep-learning-template"
version = "0.1.0"
description = "A template for deep learning projects, using PyTorch Lightning and Hydra."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Miguel Pereira", email = "miguel.b.per@gmail.com"},
]
dependencies = [
    "torch>=2.5.0",
    "lightning>=2.4.0",
    "torchmetrics>=1.5.1",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "tensorboard>=2.18.0",
    "optuna>=2.10.1",
    "mlflow>=2.17.1",
    "ipykernel>=6.29.5",
    "rich>=13.9.3",
    "rootutils>=1.0.7",
    "pydantic>=2.9.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "SIM",  # flake8-simplify
]
